--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,10 @@ nav{
     display: inline-block;
 }
 
+.border-7{
+    border-width: .2px !important;
+}
+
 .imgMedium,.imgLarge{
     display: none;
 }
@@ -103,6 +107,39 @@ h2{
     height:3px;
     top:0
    
+}
+
+.cardInfo{
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding:.5rem 2rem;
+    transition: transform 1s;
+}
+.cardInfo::after{
+    content:'';
+    background-image:linear-gradient(rgb(90, 119, 255),rgb(188, 113, 152),rgb(255, 197, 147));
+    position: absolute;
+    border-radius: 2px;
+    width:100%;
+    height:5px;
+    bottom:0;
+    left:0;
+    opacity: 0;
+}
+
+
+.cardCaption:hover{
+  transform: translateY(-15%);
+}
+
+.cardCaption:hover .cardInfo::after{
+    opacity:1;
 }
 @media screen and (min-width:768px) {
     .navbar-expand-lg .navbar-toggler {
