--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ nav{
     display: none;
 }
 
-.homeImage,.designImage{
+.homeImage,.designImage,.moonImage{
     order:-1;
 }
 h2{
@@ -124,6 +124,10 @@ h2{
     justify-content: flex-end;
     padding:.5rem 2rem;
     transition: transform 1s;
+}
+
+.cardInfo > p{
+  font-size: .6rem;
 }
 .cardInfo::after{
     content:'';
@@ -186,7 +190,7 @@ h2{
     .imgSmall,.imgLarge{
         display: none;
     }
-    .homeImage,.designImage{
+    .homeImage,.designImage,.moonImage{
         order:0;
     }
 
