--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,38 @@ h2{
 .beta{
     background-image: url('../assets/shared/mobile/bg-beta.jpg');
     background-size: cover;
-    
+}
+
+.plans{
+    width:90%;
+}
+
+.plan{
+    background-color: #F5F5F5;
+}
+
+.selectedPlan{
+    background-color: #000;
+    color:#fff;
+    position: relative;
+}
+
+.selectedPlan::before{
+content:'';
+position: absolute;
+background-image:linear-gradient(rgb(90, 119, 255),rgb(188, 113, 152),rgb(255, 197, 147));
+width: 100%;
+height: 4px;
+top:0px;
+left:0;
+}
+
+.planWidth{
+    width:95%;
+    margin:0 auto;
+}
+.pWidth{
+    width:80%;
 }
 @media screen and (min-width:768px) {
     .navbar-expand-lg .navbar-toggler {
@@ -216,6 +247,21 @@ h2{
     .inviteWidth{
         width:85%;
     }
+    .btnWidth{
+        width:40%;
+    }
+    .pWidth{
+        width:50%;
+    }
+
+    .selectedPlan::before{
+        width: 4px;
+        height: 100%;
+}
+
+.selectedPlan{
+    transform: scale(1);
+}
 }
 
 @media screen and (min-width:992px){
@@ -239,4 +285,24 @@ h2{
     .inviteWidth{
         width:70%;
     }
+    .plans{
+        width:75%;
+    }
+
+    .btnWidth{
+        width:100%;
+    }
+
+    .pWidth{
+        width:90%;
+    }
+
+    .selectedPlan{
+        transform: scale(1.1);
+    }
+
+    .selectedPlan::before{
+        width: 100%;
+        height: 4px;
+        }
 }
